--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -2,13 +2,13 @@
 
 $main-font: "Montserrat, sans-serif";
 
-$header-color: #181818;
+$header-color: black;
 
-$card-color: #181818;
+$logo-color: #C90812;
 
-$logo-color: #1DB954;
+$card-color: black;
 
-$main-background: #0E1217;
+$main-background: black;
 
 $loader_background: #0E1217;
 
