--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -1,7 +1,5 @@
 // qui posso inserire tutti i font - colori - stili e assegnarli delle variabili 
 
-$main-font: "Montserrat, sans-serif";
-
 $header-color: black;
 
 $logo-color: #C90812;
@@ -10,8 +8,9 @@ $card-color: black;
 
 $main-background: black;
 
-$loader_background: #0E1217;
+$loader_background: black;
 
 $title-color: white;
 
 $info-color: grey;
+
